<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".RegisterActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="16dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="50dp"
                android:src="@mipmap/pln3_foreground">

            </ImageView>

            <ImageView
                android:layout_width="734dp"
                android:layout_height="508dp"
                android:layout_marginStart="-300dp"
                android:layout_marginLeft="-230dp"
                android:layout_marginTop="70dp"
                android:layout_marginEnd="300dp"
                android:layout_marginRight="0dp"
                android:src="@mipmap/latar_foreground">

            </ImageView>


        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="310dp"
        android:background="@drawable/box"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="Selamat Datang"
            android:layout_marginLeft="47dp"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextUserName"
                android:layout_width="319dp"
                android:layout_height="50dp"
                android:layout_marginLeft="47dp"
                android:hint="@string/username"
                android:inputType="textPersonName"
                app:errorEnabled="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-5dp"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextEmail"
                android:layout_width="319dp"
                android:layout_height="50dp"
                android:layout_marginLeft="47dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-5dp"
            app:errorEnabled="true"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorAccent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextPassword"
                android:layout_width="319dp"
                android:layout_height="50dp"
                android:layout_marginLeft="47dp"
                android:hint="@string/password"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/buttonRegister"
            android:layout_width="319dp"
            android:layout_height="50dp"
            android:layout_gravity="start"
            android:layout_marginLeft="47dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/button2"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password"
            app:layout_constraintVertical_bias="0.2" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="130dp">

            <TextView
                android:id="@id/sudahpunyaakun"
                android:layout_width="149dp"
                android:layout_height="18dp"
                android:layout_marginTop="0dp"
                android:text="Sudah punya akun?"
                android:textSize="13sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/textViewLogin"
                android:layout_width="wrap_content"
                android:layout_height="18dp"
                android:layout_gravity="start"
                android:layout_marginLeft="-55dp"
                android:layout_marginTop="0dp"
                android:background="#00000000"
                android:text="Login"
                android:textAllCaps="false"
                android:textColor="#1394C5"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </LinearLayout>

    </LinearLayout>





</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>